# VCM

./: .gitignore  README.md  build.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
packaging-artifacts/: RegisterSoftcam.bat  UnregisterSoftcam.bat
src/: camera.py  config.json  config.py  config.yml  main.py  microphone.py  osd.py
src/softcam/: softcam.pyd
src/utils/: resources.py
